@@ -28,6 +28,9 @@
 #include "psxmem.h"
 #include "psxhw.h"
 
+#define btoi(b)     ((b)/16*10 + (b)%16)    /* BCD to u_char */
+#define itob(i)     ((i)/10*16 + (i)%10)    /* u_char to BCD */
+
 typedef struct {
 	unsigned char OCUP;
 	unsigned char Reg1Mode;
